# Yaocihuatl

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  texto.txt
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  auth.py  chimalli.py  machiyotl.py  tlachia.py  users.py
backend/app/seed/: demo_data.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 20260515_0001_platform_foundation.py  20260515_0002_chimalli_attachments.py  20260516_0002_tlachia_sources_and_ingestion.py  20260516_0003_tlachia_synthetic_adapters.py  20260516_0004_merge_chimalli_tlachia_heads.py
backend/modules/: README.md
backend/modules/chimalli/: README.md  contracts.md
backend/modules/machiyotl/: README.md
backend/scripts/: seed_tlachia_alerts.py  start_backend.sh
backend/tests/: db_test_utils.py  test_auth.py  test_auth_api.py  test_chimalli_api.py  test_chimalli_attachments.py  test_chimalli_flow.py  test_chimalli_rag.py  test_config.py  test_database_migrations.py  test_machiyotl_verify.py  test_tlachia_alert_service.py  test_tlachia_api.py  test_tlachia_ingestion_service.py  test_tlachia_reddit_client.py  test_tlachia_retention.py  test_tlachia_risk_rules.py  test_tlachia_sanitization.py  test_tlachia_synthetic_adapters.py  test_users.py
docs/: README.md
(+115 files in other folders)
