[project]
name = "yaocihuatl-backend"
version = "0.1.0"
description = "Backend MVP para Yaocihuatl, incluyendo Chimalli."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2.6,<3.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pypdf>=4.0,<6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["modules*", "migrations*", "tests*"]
