[project]
name = "yaocihuatl-backend"
version = "0.1.0"
description = "Backend MVP para Yaocihuatl, incluyendo Chimalli."
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.110,<1.0",
  "PyJWT>=2.8,<3.0",
  "pydantic>=2.6,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pypdf>=4.0,<6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["modules*", "migrations*", "tests*"]
